# raytris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  colors.txt  graphics.c  graphics.h  main.c  raytris.c  raytris.h  settings.c  settings.h  tetromino.c  tetromino.h
resources/: README.md  raytris.ini
resources/shaders/background/: none.fs  sky.fs
scripts/: hex2vec.py
